--- a/MarchingCubes/MarchingCubes.csproj
+++ b/MarchingCubes/MarchingCubes.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Game.cs" />
     <Compile Include="ICamera.cs" />
     <Compile Include="IInputData.cs" />
+    <Compile Include="RendererExtensions\LineMeshDescriptionBuilder.cs" />
+    <Compile Include="RendererExtensions\WireFramePen.cs" />
     <Compile Include="SceneGraph\ISceneGraphEntityInitializeProgressReporter.cs" />
     <Compile Include="Scenes\LoadingProgressScene.cs" />
     <Compile Include="Scenes\MarchingCubesScene.cs" />
