added marching cubes algorithm. it doesn't seem to proprely work yet. the rough shape is visible but lots of cuts (lerp errors?)

--- a/MarchingCubes/MarchingCubes.csproj
+++ b/MarchingCubes/MarchingCubes.csproj
@@ -67,7 +67,9 @@
     <Compile Include="Game.cs" />
     <Compile Include="ICamera.cs" />
     <Compile Include="IInputData.cs" />
+    <Compile Include="MarchingCubesAlgorithm.cs" />
     <Compile Include="RendererExtensions\LineMeshDescriptionBuilder.cs" />
+    <Compile Include="RendererExtensions\TriangleMeshDescriptionBuilder.cs" />
     <Compile Include="SceneGraph\ISceneGraphEntityInitializeProgressReporter.cs" />
     <Compile Include="Scenes\LoadingProgressScene.cs" />
     <Compile Include="Scenes\MarchingCubesScene.cs" />
