--- a/MarchingCubes/MarchingCubes.csproj
+++ b/MarchingCubes/MarchingCubes.csproj
@@ -80,9 +80,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SceneGraph\SceneGraphRoot.cs" />
+    <Compile Include="Scenes\Visualizer\ActiveCubeVisualizer.cs" />
     <Compile Include="Threading\GenericBackgroundQueueWorker.cs" />
     <Compile Include="SceneGraph\SceneGraphEntity.cs" />
     <Compile Include="Data\ZippedMriData.cs" />
+    <Compile Include="Scenes\Visualizer\VisualizerBackgroundWorker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\mri.zip">
