--- a/MarchingCubes.Tests/packages.config
+++ b/MarchingCubes.Tests/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="4.9.1" targetFramework="net461" />
-  <package id="MonoGame.Framework.WindowsDX" version="3.5.1.1679" targetFramework="net461" />
-  <package id="NSubstitute" version="1.10.0.0" targetFramework="net461" />
-  <package id="NUnit" version="3.4.1" targetFramework="net461" />
+  <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
+  <package id="FluentAssertions" version="5.4.2" targetFramework="net461" />
+  <package id="MonoGame.Framework.WindowsDX" version="3.6.0.1625" targetFramework="net461" />
+  <package id="NSubstitute" version="3.1.0" targetFramework="net461" />
+  <package id="NUnit" version="3.10.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
