--- a/MarchingCubes/MarchingCubes.csproj
+++ b/MarchingCubes/MarchingCubes.csproj
@@ -77,10 +77,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SceneGraph\SceneGraphRoot.cs" />
     <Compile Include="Scenes\Visualizer\ActiveCubeVisualizer.cs" />
+    <Compile Include="Brushes\NormalBrush.cs" />
     <Compile Include="Threading\GenericBackgroundQueueWorker.cs" />
     <Compile Include="SceneGraph\SceneGraphEntity.cs" />
     <Compile Include="Data\ZippedMriData.cs" />
     <Compile Include="Scenes\Visualizer\VisualizerBackgroundWorker.cs" />
+    <Compile Include="VertexPositionNormal.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\mri.zip">
