fixed marching cube implemementation (some swapped coordinates) and added new geometry sample

--- a/MarchingCubes/MarchingCubes.csproj
+++ b/MarchingCubes/MarchingCubes.csproj
@@ -85,6 +85,7 @@
     <Compile Include="VertexPositionNormal.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Content\CutGeometry.zip" />
     <None Include="Content\mri.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
